# WFA_Compressing

./: CMakeLists.txt  README.md  main.c  main.cpp
View/: mainWindow.glade
examples/: deterministic.wfa  nondeterministic.wfa
header_files/: Coding.h  Decoding.h  DeterministicCoding.h  DeterministicDecoding.h  Element.h  NondeterministicCoding.h  NondeterministicDecoding.h  Quadrant.h  State.cpp  State.h  Testing.h  Transition.h  grayquadtree.h  quadrant.h  rgbquadtree.h  wfa.h
source_files/: Coding.cpp  Decoding.cpp  DeterministicCoding.cpp  DeterministicDecoding.cpp  Element.cpp  NondeterministicCoding.cpp  NondeterministicDecoding.cpp  Quadrant.cpp  State.cpp  Testing.cpp  Transition.cpp  grayquadtree.c  rgbquadtree.c  wfa.c
